Prepare for Version 0.2 Alpha Release

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,40 @@
-
+torch
+transformers
+numpy
+pandas
 yt-dlp
 openai-whisper
-transformers
-torch
-tqdm
+ffmpeg-python
+pydub
+librosa
+soundfile
+noisereduce
+pyloudnorm
 spacy
 sentence-transformers
 scikit-learn
 keybert
 nltk
+wordcloud
 regex
 cleantext
-librosa
-soundfile
-scipy
-noisereduce
-pyloudnorm
-pydub
-ffmpeg-python
-gtts
-numpy
-pandas
+matplotlib
+seaborn
+tqdm
+rich
+python-json-logger
+psutil
 python-dotenv
 requests
 pyyaml
 joblib
-matplotlib
-seaborn
 nvidia-cudnn-cu11
-psutil
-rich
-python-json-logger
-wordcloud
+gtts
+scipy
+datasets
+accelerate
+safetensors
+pytest
+black
+isort
+flake8
